Fixed x overflow from footer

--- a/style.css
+++ b/style.css
@@ -557,7 +557,7 @@ nav {
 	 align-items: center;
 	 justify-content: center;
 	 background: #121212;
-	 width: 100vw;
+	 width: 100%;
 	 height: 160px;
 	 margin: 0 auto;
 }
@@ -606,7 +606,7 @@ nav {
 	 flex-direction: row;
 	 align-items: center;
 	 justify-content: center;
-	 width: 100vw;
+	 width: 100%;
 	 height: 50px;
 	 text-align: center;
 	 margin: 0 auto;
